Add more .env details

--- a/docker/default.env
+++ b/docker/default.env
@@ -3,7 +3,7 @@
 # environmental variables for interpolation in docker-compose YAML files
 
 # Must be be in the same working directory as this file or
-# explicitly `source`d before running `docker-compose`
+# explicitly `source`d (and `export`ed) before running `docker-compose`
 # docker-compose does not allow its location to be overridden
 # https://github.com/docker/compose/issues/4841
 
