--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ env:
     - PACKAGE_NAME="${PACKAGE_NAME:-${GH_REPO}}"
     - DEB_REPO="${DEB_REPO:-portal-deb}"
     - DOCKER_REPO="${DOCKER_REPO:-portal-docker}"
-    - IMAGE_NAME="${IMAGE_NAME:-portal_web}"
-    - DOCKER_REPOSITORY="$IMAGE_NAME"
+    - DOCKER_IMAGE_NAME="${DOCKER_IMAGE_NAME:-portal_web}"
+    - DOCKER_REPOSITORY="$DOCKER_IMAGE_NAME"
     - IMAGE_TAG=travis
 
     - DOCKER_CLOUD_USERNAME="${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}"
@@ -170,12 +170,12 @@ after_deploy:
       for tag in $DOCKER_TAGS; do
         docker tag
           "$DOCKER_REPOSITORY:$IMAGE_TAG"
-          "uwcirg-$DOCKER_REPO.jfrog.io/$IMAGE_NAME:$tag";
+          "uwcirg-$DOCKER_REPO.jfrog.io/$DOCKER_IMAGE_NAME:$tag";
       done
     fi
   - if [[ -v ARTIFACTORY_TOKEN ]]; then
       for tag in $DOCKER_TAGS; do
-        docker push "uwcirg-$DOCKER_REPO.jfrog.io/$IMAGE_NAME:$tag";
+        docker push "uwcirg-$DOCKER_REPO.jfrog.io/$DOCKER_IMAGE_NAME:$tag";
       done &
     fi
 
@@ -184,12 +184,12 @@ after_deploy:
       for tag in $DOCKER_TAGS; do
         docker tag
           "$DOCKER_REPOSITORY:$IMAGE_TAG"
-          "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
+          "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$DOCKER_IMAGE_NAME:$tag";
       done
     fi
   - if [[ -v BINTRAY_API_KEY ]]; then
       for tag in $DOCKER_TAGS; do
-        docker push "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
+        docker push "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$DOCKER_IMAGE_NAME:$tag";
       done &
     fi
 
@@ -198,12 +198,12 @@ after_deploy:
       for tag in $DOCKER_TAGS; do
         docker tag
           "$DOCKER_REPOSITORY:$IMAGE_TAG"
-          "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$tag";
+          "$DOCKER_CLOUD_USERNAME/$DOCKER_IMAGE_NAME:$tag";
       done
     fi
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
       for tag in $DOCKER_TAGS; do
-        docker push "$DOCKER_CLOUD_USERNAME/$IMAGE_NAME:$tag";
+        docker push "$DOCKER_CLOUD_USERNAME/$DOCKER_IMAGE_NAME:$tag";
       done &
     fi
 
