--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,7 +2,7 @@
 version: "3.2"
 services:
   web:
-    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
+    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${DOCKER_IMAGE_TAG:-latest}"
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -29,7 +29,7 @@ services:
       - celery
       - celerybeat
   celery:
-    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
+    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${DOCKER_IMAGE_TAG:-latest}"
     command: bash -c '
       env &&
       celery worker
@@ -45,7 +45,7 @@ services:
     depends_on:
       - redis
   celerybeat:
-    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
+    image: "${DOCKER_REPOSITORY-uwcirg-portal-docker.jfrog.io/}${DOCKER_IMAGE_NAME:-portal_web}:${DOCKER_IMAGE_TAG:-latest}"
     command: bash -c '
       env &&
       celery beat
