Move docker delivery commands into bash script

--- a/.travis.yml
+++ b/.travis.yml
@@ -140,54 +140,5 @@ deploy:
         "$ARTIFACTORY_REPO_URL/$PACKAGE_NAME;deb.distribution=stable;deb.component=main;deb.architecture=amd64"
 
 after_deploy:
-  # Deploy to Artifactory, if configured
-  - if [[ -v ARTIFACTORY_TOKEN ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker tag
-          "${DOCKER_REPOSITORY}${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"
-          "uwcirg-$DOCKER_REPO.jfrog.io/$DOCKER_IMAGE_NAME:$tag";
-      done
-    fi
-  - if [[ -v ARTIFACTORY_TOKEN ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker push "uwcirg-$DOCKER_REPO.jfrog.io/$DOCKER_IMAGE_NAME:$tag";
-      done &
-    fi
-
-  # Deploy to Bintray, if configured
-  - if [[ -v BINTRAY_API_KEY ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker tag
-          "${DOCKER_REPOSITORY}${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"
-          "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$DOCKER_IMAGE_NAME:$tag";
-      done
-    fi
-  - if [[ -v BINTRAY_API_KEY ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker push "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$DOCKER_IMAGE_NAME:$tag";
-      done &
-    fi
-
-  # Deploy to Docker Hub, if configured
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker tag
-          "${DOCKER_REPOSITORY}${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"
-          "$DOCKER_CLOUD_USERNAME/$DOCKER_IMAGE_NAME:$tag";
-      done
-    fi
-  - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
-      for tag in $DOCKER_TAGS; do
-        docker push "$DOCKER_CLOUD_USERNAME/$DOCKER_IMAGE_NAME:$tag";
-      done &
-    fi
-
-  # Deploy to Heroku, if configured
-  - if [[ -v HEROKU_API_KEY ]]; then
-      docker tag "${DOCKER_REPOSITORY}${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}" "registry.heroku.com/$HEROKU_APP/web";
-      docker push "registry.heroku.com/$HEROKU_APP/web" &
-    fi
+  - ./bin/docker-push.sh
   - docker images --digests --all
-
-  # Wait for background jobs to finish (if they haven't already)
-  - wait
