Only deploy from develop or master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,11 +58,6 @@ matrix:
     - env: TOXENV=ui
 
 before_install:
-  # Only deploy from develop and master branches, and not previously configured
-  - if [[ ! -v DEPLOY && ("$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "develop") ]]; then
-      export DEPLOY=true;
-    fi
-
   # Set TOXENV default (if not already set by matrix environment variables)
   - if [[ ! -v TOXENV ]]; then export TOXENV=py27;fi
 
@@ -103,10 +98,11 @@ deploy:
   - provider: script
     skip_cleanup: true
     on:
-      all_branches: true
+      branch:
+        - develop
+        - master
       condition:
         - $TOXENV = build
-        - $DEPLOY = true
         - -v ARTIFACTORY_API_KEY
     script:
       curl
