--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,17 @@ deploy:
           --user "$ARTIFACTORY_USERNAME:$ARTIFACTORY_API_KEY"
           "$ARTIFACTORY_DEB_REPO/$PACKAGE_NAME;deb.distribution=stable;deb.component=main;deb.architecture=amd64"
 
+  - provider: script
+    skip_cleanup: true
+    on:
+      branch:
+        - develop
+        - master
+      condition:
+        - $TOXENV = build
+        - -v ARTIFACTORY_API_KEY
+    script:
+      - ./bin/docker-push.sh
+
 after_deploy:
-  - ./bin/docker-push.sh
   - docker images --digests --all
