Move docker image-building into tox

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,9 @@ commands =
     nosetests -v --cover-package=portal tests.test_integration []
 
 [testenv:build]
-# stub env for building artifacts on TravisCI
-# don't actually do anything
-platform = $^
+deps =
+skip_install = True
+passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
+whitelist_externals = /bin/bash
+commands =
+    bash -c "{toxinidir}/bin/docker-build.sh"
