--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ matrix:
     - env: TOXENV=build
       services:
         - docker
+      addons: {}
     - env: TOXENV=ui
       addons:
         postgresql: "9.4"
