Output XML coverage report after nosetest run

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_FILE FLASK_APP
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
-    nosetests -v --with-cover --cover-package=portal --exclude test_integration []
+    nosetests -v --with-cover --cover-package=portal --cover-xml-file "{toxinidir}/coverage.xml"  --exclude test_integration []
 
 [testenv:docs]
 changedir = docs
