Fix whitespace issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,8 +78,8 @@ script:
 
 after_success:
   - if [ -n "$CODACY_PROJECT_TOKEN" ] && [ -f "coverage.xml" ]; then
-      pip install codacy-coverage
-      python-codacy-coverage -r coverage.xml
+      pip install codacy-coverage ;
+      python-codacy-coverage -r coverage.xml ;
     fi
 
 before_deploy:
