move git commands to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,10 @@ install:
   - pip install tox
 
 script:
+  - git branch -r
+  - echo $BRANCH
+  - git branch
+  - git remote -v
   - tox
 
 after_success:
