--- a/tox.ini
+++ b/tox.ini
@@ -36,4 +36,4 @@ skip_install = True
 passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
 whitelist_externals = /bin/bash
 commands =
-    bash -c "git branch -r && echo $BRANCH && git branch && git remote -v && {toxinidir}/bin/docker-build.sh"
+    bash -c "{toxinidir}/bin/docker-build.sh"
