Rename build job in tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,translations,docs,ui,build
+envlist = py27,translations,docs,ui,build-artifacts
 skip_missing_interpreters = True
 
 [base]
@@ -30,7 +30,7 @@ commands =
     {[base]commands}
     nosetests -v --cover-package=portal tests.test_integration []
 
-[testenv:build]
+[testenv:build-artifacts]
 deps =
 skip_install = True
 passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
