Moved site_persistence files within the project. Generated a new `config` directory with nested directories for `eproms` and `gil`. Moved implementation modules `config.py` and `site_persistence.py` within. Updated docs to fit new model. Replaced PERSISTENCE_FILE with PERSISTENCE_DIR (and corrected value) as we plan to move forward with any number of persistence files rather than a single, massive, global one per project.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -51,7 +51,7 @@ ENV \
     PORT="${PORT:-8008}" \
     FLASK_APP="${PROJECT_DIR}/bin/manage.py" \
     PATH="${PROJECT_DIR}/bin:${PATH}" \
-    PERSISTENCE_FILE="${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}"
+    PERSISTENCE_DIR="${PERSISTENCE_DIR:-gil}"
 
 EXPOSE "${PORT}"
 
