Split tox translation environment

--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,6 @@ commands =
 changedir = docs
 commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
-[testenv:translations]
-passenv = SMARTLING_* {[testenv]passenv}
-commands =
-    flask sync
-    bash -c "if [[ "$TRAVIS_BRANCH" = "develop" ]]; then flask translation_upload ;fi"
-
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
 commands =
@@ -37,3 +31,13 @@ passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
 whitelist_externals = /bin/bash
 commands =
     bash -c "{toxinidir}/bin/docker-build.sh"
+
+[testenv:backend-translations]
+commands =
+    flask sync
+    bash -c "if [[ "$TRAVIS_BRANCH" = "develop" ]]; then flask translation_upload ;fi"
+
+[testenv:translations]
+passenv = SMARTLING_* {[testenv]passenv}
+commands =
+    {[testenv:backend-translations]commands}
