Add tox environment for creating frontend i18n strings

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,19 @@ whitelist_externals = /bin/bash
 commands =
     bash -c "{toxinidir}/bin/docker-build.sh"
 
+[testenv:frontend-translations]
+deps =
+    nodeenv
+    {[testenv]deps}
+whitelist_externals =
+    nodeenv
+    /bin/bash
+commands =
+    nodeenv "{envtmpdir}/node_env"
+    bash -c 'source "{envtmpdir}/node_env/bin/activate" && npm --prefix "{toxinidir}/portal" install'
+    bash -c 'source "{envtmpdir}/node_env/bin/activate" && npm --prefix "{toxinidir}/portal" install gulp gulp-merge-json'
+    bash -c 'source "{envtmpdir}/node_env/bin/activate" && node "{toxinidir}/portal/node_modules/gulp/bin/gulp.js" --gulpfile "{toxinidir}/portal/i18next_gulpfile.js"'
+
 [testenv:backend-translations]
 commands =
     flask sync
@@ -39,5 +52,8 @@ commands =
 
 [testenv:translations]
 passenv = SMARTLING_* {[testenv]passenv}
+deps =
+    {[testenv:frontend-translations]deps}
 commands =
+    {[testenv:frontend-translations]commands}
     {[testenv:backend-translations]commands}
