--- a/instance/babel.cfg
+++ b/instance/babel.cfg
@@ -1,4 +1,11 @@
+# Babel configuration file
+# http://babel.pocoo.org/en/latest
+
+# Ignore developer-centric pages
+# Paths are relative from portal/ directory
+[ignore: templates/settings.html]
+[ignore: templates/client*.html]
+
 [python: **.py]
 [jinja2: **/templates/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
-
