Do not extract strings from admin page

--- a/instance/babel.cfg
+++ b/instance/babel.cfg
@@ -5,6 +5,7 @@
 # Paths are relative from portal/ directory
 [ignore: templates/settings.html]
 [ignore: templates/client*.html]
+[ignore: templates/admin.html]
 
 [python: **.py]
 [jinja2: **/templates/**.html]
