Add testing descriptions

--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,12 @@ envlist = py27,translations,docs,ui,build-artifacts
 skip_missing_interpreters = True
 
 [base]
+description = Common virtual environment for starting services before testing
 commands =
     bash -c "if [[ -v TRAVIS ]]; then celery worker --detach --app portal.celery_worker.celery --loglevel=info;fi"
 
 [testenv]
+description = Default testing environment, run unit test suite
 deps = -rrequirements.txt
 passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP
 whitelist_externals = /bin/bash
@@ -15,16 +17,19 @@ commands =
     nosetests -v --with-cover --cover-package=portal --cover-xml --cover-xml-file "{toxinidir}/coverage.xml"  --exclude test_integration []
 
 [testenv:docs]
+description = Test documentation generation
 changedir = docs
 commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
 [testenv:ui]
+description = Run selenium tests
 passenv = SAUCE_* {[testenv]passenv}
 commands =
     {[base]commands}
     nosetests -v --cover-package=portal tests.test_integration []
 
 [testenv:build-artifacts]
+description = Build docker artifacts and prerequisites (debian package)
 deps =
 skip_install = True
 passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
@@ -33,6 +38,7 @@ commands =
     bash -c "{toxinidir}/bin/docker-build.sh"
 
 [testenv:frontend-translations]
+description = Extract frontend strings (to JSON) and convert (to POT)
 deps =
     nodeenv
     {[testenv]deps}
@@ -45,11 +51,13 @@ commands =
     bash -c 'source "{envtmpdir}/node_env/bin/activate" && node "{toxinidir}/portal/node_modules/gulp/bin/gulp.js" --gulpfile "{toxinidir}/portal/i18next_gulpfile.js"'
 
 [testenv:backend-translations]
+description = Upload backend strings to Smartling
 commands =
     flask sync
     bash -c "if [[ "$TRAVIS_BRANCH" = "develop" ]]; then flask translation_upload ;fi"
 
 [testenv:translations]
+description = Upload frontend and backend strings to Smartling
 passenv = SMARTLING_* {[testenv]passenv}
 deps =
     {[testenv:frontend-translations]deps}
