Apply correct UUID's as provided by Amy.

--- a/portal/config/eproms/AppText.json
+++ b/portal/config/eproms/AppText.json
@@ -171,6 +171,11 @@
       "resourceType": "AppText"
     },
     {
+      "custom_text": "{config[LR_ORIGIN]}/c/portal/truenth/asset/mail?version=latest&uuid=8e562c71-e77e-8eb3-7716-152da4a59a32",
+      "name": "patient reminder email",
+      "resourceType": "AppText"
+    },
+    {
       "custom_text": "<p>(greeting),</p><p>This email was sent to you because you are a patient at (clinic name) and consented to participate in the Prostate Cancer Outcomes - (parent org) Registry Study.</p><p>This is an invitation to use the TrueNTH website, where you will report on your health. Your participation will help us collectively improve the care that men receive during their prostate cancer journey.</p><p>To complete your first questionnaire, please first verify your account.</p><div><a class=\"btn\" href=\"{0}\">Verify your account</a></div><p>You can also access the TrueNTH website with this link:<p/><p><a href=\"{0}\">{0}</a></p><p>Save this email so that you can return to TrueNTH any time.</p><p>If you have any queries, please contact your representative at (clinic name).</p>",
       "name": "profileSendEmail invite email_body",
       "resourceType": "AppText"
