--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -56,6 +56,10 @@ services:
       '
     environment:
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - PGUSER=${PGUSER:-postgres}
+      - PGPASSWORD=${PGPASSWORD:-""}
+      - PGHOST=${PGHOST:-db}
+      - PGDATABASE=${PGDATABASE:-portaldb}
     volumes:
       - source: ../instance
         target: "${PROJECT_DIR:-/opt/venvs/portal}/var/portal-instance/"
