Add docker-compose dep to tox

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 
 [testenv:build-artifacts]
 description = Build docker artifacts and prerequisites (debian package)
-deps =
+deps = docker-compose>=1.19
 skip_install = True
 passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
 whitelist_externals = /bin/bash
