--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
 description = Build docker artifacts and prerequisites (debian package)
 deps = docker-compose>=1.19
 skip_install = True
-passenv = {[testenv]passenv} BRANCH GIT_REPO DOCKER_* COMPOSE_FILE
+passenv = {[testenv]passenv} GIT_REPO DOCKER_* COMPOSE_FILE
 whitelist_externals = /bin/bash
 commands =
     bash -c "{toxinidir}/bin/docker-build.sh"
